--- a/src/index.html
+++ b/src/index.html
@@ -8,15 +8,22 @@
     <link rel="icon" type="image/x-icon" href="favicon.ico" />
     <link rel="preconnect" href="https://fonts.gstatic.com" />
     <link
-      href="https://fonts.googleapis.com/css2?family=Roboto:wght@300;400;500&display=swap"
+      href="https://fonts.googleapis.com/css2?family=Roboto:wght@300;400;500&amp;display=swap"
       rel="stylesheet"
     />
     <linkw
       href="https://fonts.googleapis.com/icon?family=Material+Icons"
       rel="stylesheet"
     />
+    <link rel="manifest" href="manifest.webmanifest" />
+    <meta name="theme-color" content="#f5f5f5" />
+    <link rel="manifest" href="manifest.webmanifest" />
+    <meta name="theme-color" content="#f5f5f5" />
   </head>
   <body class="mat-typography">
     <app-root></app-root>
+    <noscript
+      >Please enable JavaScript to continue using this application.</noscript
+    >
   </body>
 </html>
