--- a/src/index.html
+++ b/src/index.html
@@ -11,14 +11,13 @@
       href="https://fonts.googleapis.com/css2?family=Roboto:wght@300;400;500&amp;display=swap"
       rel="stylesheet"
     />
-    <linkw
+    <link rel="manifest" href="manifest.webmanifest" />
+    <meta name="theme-color" content="#f5f5f5" />
+    <link
       href="https://fonts.googleapis.com/icon?family=Material+Icons"
       rel="stylesheet"
-    />
-    <link rel="manifest" href="manifest.webmanifest" />
-    <meta name="theme-color" content="#f5f5f5" />
-    <link rel="manifest" href="manifest.webmanifest" />
-    <meta name="theme-color" content="#f5f5f5" />
+    >
+    </link>
   </head>
   <body class="mat-typography">
     <app-root></app-root>
